[package]
 name = "streamer"
 version = "0.1.0"
 edition = "2021"
 
[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
tokio = { version = "1.36.0", features = ["full"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
futures = "0.3.31"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "tls-native-tls", "bigdecimal"] }
alloy = { version = "0.13.0", features = ["full"] }
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
chrono = { version = "0.4.37", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
tracing = "0.1.40"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.18"
tokio-tungstenite = { version = "0.21.0" }
url = "2.4.1"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
once_cell = "1.19.0"
hex = "0.4.3"
